# cldpm

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md  RELEASING.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: deploy-docs.yml  docs.yml  release-python.yml  release-typescript.yml  release.yml  test.yml
docs/: ai-integration.mdx  concepts.mdx  introduction.mdx  mint.json  quickstart.mdx
docs-nextra/: .gitignore  next.config.mjs  package-lock.json  package.json  theme.config.tsx
docs-nextra/pages/: _meta.json  ai-integration.mdx  concepts.mdx  index.mdx  quickstart.mdx
docs-nextra/pages/cli/: _meta.json  add.mdx  create.mdx  get.mdx  index.mdx  init.mdx  link.mdx  remove.mdx  sync.mdx
docs-nextra/pages/examples/: _meta.json  basic-monorepo.mdx  remote-repositories.mdx  shared-components.mdx
docs-nextra/pages/sdks/: _meta.json  go.mdx  index.mdx  rust.mdx
docs-nextra/pages/sdks/python/: _meta.json  api-reference.mdx  installation.mdx  usage.mdx
docs-nextra/pages/sdks/typescript/: api-reference.mdx  installation.mdx  usage.mdx
docs/cli/: add.mdx  clone.mdx  create.mdx  get.mdx  init.mdx  link.mdx  overview.mdx  remove.mdx  sync.mdx
docs/examples/: basic-monorepo.mdx  remote-repositories.mdx  shared-components.mdx
docs/sdks/: overview.mdx
docs/sdks/python/: api-reference.mdx  installation.mdx  usage.mdx
docs/sdks/typescript/: api-reference.mdx  installation.mdx  usage.mdx
python/: .gitignore  CLI.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SDK.md  SECURITY.md  pyproject.toml
python/cldpm/: __init__.py  __main__.py  _banner.py  ai_rules.py  cli.py
python/cldpm/commands/: __init__.py  add.py  clone.py  create.py  get.py  init.py  link.py  remove.py  sync.py
python/cldpm/core/: __init__.py  config.py  linker.py  resolver.py
python/cldpm/schemas/: __init__.py  cldpm.py  component.py  project.py
python/cldpm/templates/: CLAUDE.md.j2  ROOT_CLAUDE.md.j2  clinerules.j2  cursorrules.j2  gitignore.j2  hook.md.j2  skill.md.j2
python/cldpm/utils/: __init__.py  fs.py  git.py  output.py
python/cpm/: __init__.py  __main__.py  _banner.py  cli.py
python/cpm/commands/: __init__.py  add.py  clone.py  create.py  get.py  init.py  link.py  remove.py  sync.py
python/cpm/core/: __init__.py  config.py  linker.py  resolver.py
python/cpm/schemas/: __init__.py  cpm.py  project.py
python/cpm/templates/: CLAUDE.md.j2  ROOT_CLAUDE.md.j2  agent.md.j2  gitignore.j2  rule.md.j2
python/cpm/utils/: __init__.py  fs.py  git.py  output.py
python/tests/: __init__.py  test_add.py  test_clone.py  test_create.py  test_create_component.py  test_dependencies.py  test_get.py  test_git.py  test_init.py  test_link.py  test_remove.py  test_sdk_config.py  test_sdk_linker.py  test_sdk_resolver.py  test_sdk_schemas.py  test_sync.py
typescript/: .gitignore  CLI.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SDK.md  SECURITY.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
typescript/scripts/: postinstall.js
typescript/src/: ai-rules.ts  cli.ts  index.ts
typescript/src/commands/: add.ts  clone.ts  create.ts  get.ts  index.ts  info.ts  init.ts  link.ts  remove.ts  sync.ts
typescript/src/core/: config.ts  index.ts  linker.ts  resolver.ts
typescript/src/schemas/: cldpm.ts  component.ts  cpm.ts  index.ts  project.ts
typescript/src/utils/: git.ts  index.ts  output.ts
typescript/tests/: cli-commands.test.ts  config.test.ts  git.test.ts  init.test.ts  linker.test.ts  resolver.test.ts  schemas.test.ts
