[project]
name = "cpm"
version = "0.1.0"
description = "Claude Project Manager - Mono repo management for Claude Code projects"
requires-python = ">=3.10"
authors = [
    { name = "Aman Agarwal", email = "aman@transilience.ai" },
]
maintainers = [
    { name = "Transilience.ai" },
]
dependencies = [
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "jinja2>=3.1.0",
]

[project.scripts]
cpm = "cpm.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cpm"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
