[project]
name = "cldpm"
version = "0.1.0"
description = "Claude Project Manager - SDK and CLI for mono repo management with Claude Code projects"
requires-python = ">=3.10"
authors = [
    { name = "Aman Agarwal", email = "agarwal.aman041@gmail.com" },
]
maintainers = [
    { name = "Transilience.ai" },
]
dependencies = [
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "jinja2>=3.1.0",
]

[project.scripts]
cldpm = "cldpm.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cldpm"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
